List swagger integration complete
