# lib/todolist_web/controllers/list_controller.ex
@@ -12,6 +12,16 @@ defmodule TodoListWeb.ListController do
     render(conn, :index, lists: lists)
   end
 
+   # Swagger List Function
+   swagger_path :index do
+    get("/api/lists")
+    summary("Get total lists")
+    description("Get total lists")
+    produces("application/json")
+    # security([%{Bearer: []}])
+    response(200, "Ok", Schema.ref(:TotalLists))
+  end
+
 
 
   def create(conn, list_params) do
@@ -39,11 +49,27 @@ defmodule TodoListWeb.ListController do
 
   def show(conn, %{"id" => id}) do
     list = Lists.get_list!(id)
-    render(conn, :show, list: list)
+    render(conn, :show, list: list, message: "get list successfully")
   end
 
+  # Swagger Edit with ID
+    swagger_path :show do
+      get("/api/lists/{id}")
+      summary("Get single list")
+      description("Get single list")
+      produces("application/json")
+      # security([%{Bearer: []}])
+      parameters do
+        id :path, :string, "List Id", required: true
+      end
+      response(200, "Ok", Schema.ref(:SingleList))
+    end
+
+
+
+
   @spec archived_status(any, map) :: any
-  def archived_status(conn, %{ "list" => list_params}) do
+  def archived_status(conn, list_params) do
 
     case Lists.get_by_archived(list_params["id"]) do
       nil ->
@@ -56,13 +82,40 @@ defmodule TodoListWeb.ListController do
     end
   end
 
+  # Swagger update archive status
+  swagger_path :archived_status do
+    put("/api/archived-status")
+    summary("Update list status")
+    description("Update list status")
+    produces("application/json")
+    # security([%{Bearer: []}])
+    parameters do
+      body(:body, Schema.ref(:StatusUpdateList), "List Params", required: true)
+    end
+    response(200, "Ok")
+  end
+
   @spec update(any, map) :: any
-  def update(conn, %{"id" => id, "list" => list_params}) do
-    list = Lists.get_list!(id)
+  def update(conn, list_params) do
+    list = Lists.get_list!(list_params["id"])
 
     with {:ok, %List{} = list} <- Lists.update_list(list, list_params) do
       render(conn, :show, list: list, message: "list updated successfully")
     end
+  end
+
+  # Swagger update list
+  swagger_path :update do
+    put("/api/lists/{id}")
+    summary("Update list ")
+    description("Update list")
+    produces("application/json")
+    # security([%{Bearer: []}])
+    parameters do
+      id :path, :string, "List Id", required: true
+      body(:body, Schema.ref(:UpdateList), "List Params", required: true)
+    end
+    response(200, "Ok")
   end
 
   def delete(conn, %{"id" => id}) do
@@ -73,6 +126,19 @@ defmodule TodoListWeb.ListController do
     end
   end
 
+   # Swagger Edit with ID
+   swagger_path :delete do
+    PhoenixSwagger.Path.delete("/api/lists/{id}")
+    summary("Get single list")
+    description("Get single list")
+    produces("application/json")
+    # security([%{Bearer: []}])
+    parameters do
+      id :path, :string, "List Id", required: true
+    end
+    response(200, "Ok", Schema.ref(:DeleteList))
+  end
+
   def archived_list(conn, %{"status" => status}) do
     lists = Lists.archived_lists(status)
     render(conn, :index, lists: lists)
@@ -81,13 +147,13 @@ defmodule TodoListWeb.ListController do
 
   def swagger_definitions do
     %{
-      # TotalAbouts:
-      #   swagger_schema do
-      #     title("Abouts Us")
-      #     description("About me details")
+      TotalLists:
+      swagger_schema do
+        title("Lists")
+        description("List details")
 
-      #     example(%{})
-      #   end,
+        example(%{})
+      end,
         CreateList:
         swagger_schema do
           title("List Schema")
@@ -103,7 +169,59 @@ defmodule TodoListWeb.ListController do
             archived: true,
 
           })
-        end
+        end,
+        SingleList:
+      swagger_schema do
+        title("Single List")
+        description("List details")
+
+        example(%{})
+      end,
+      StatusUpdateList:
+      swagger_schema do
+        title("Status update List")
+        description("Status update list details")
+
+        properties do
+          id(:string, "id", required: true)
+        title(:string, "title", required: true)
+        archived(:boolean, "archived", required: false)
+      end
+
+        example(%{
+          archived: true,
+                title: "najams",
+                id: "4c27de4f-ea2b-44bc-a871-b6f477b7417d"
+        })
+      end,
+      UpdateList:
+      swagger_schema do
+        title("update List")
+        description("update list details")
+
+        properties do
+          id(:string, "id", required: true)
+        title(:string, "title", required: true)
+        archived(:boolean, "archived", required: true)
+      end
+        example(%{
+                archived: true,
+                title: "james",
+                id: "4c27de4f-ea2b-44bc-a871-b6f477b7417d"
+
+        })
+      end,
+      DeleteList:
+      swagger_schema do
+        title("Delete List")
+        description("Delete list details")
+
+        properties do
+          id(:string, "id", required: true)
+      end
+
+        example(%{})
+      end,
     }
   end
 
